--- a/style.css
+++ b/style.css
@@ -17,3 +17,9 @@ td{
     border: 2px dashed;
     border-color: aquamarine;
 }
+.opcoes{
+    background: gray;
+    color:brown;
+    border: 2px dashed;
+    border-color: aquamarine;
+}
