--- a/style.css
+++ b/style.css
@@ -23,3 +23,9 @@ td{
     border: 2px dashed;
     border-color: aquamarine;
 }
+.servia{
+    background: gray;
+    color:brown;
+    border: 2px dashed;
+    border-color: aquamarine;    
+}
